// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`flyout/Flyout alterCoordinates is called when rendering 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "anchorPoint": "top-left",
        "containerPosition": Object {
          "left": 0,
          "top": -5,
        },
        "pointerPosition": Object {
          "left": 0,
          "top": 1,
        },
      },
      Object {
        "actionRect": Object {
          "bottom": 0,
          "height": 0,
          "left": 0,
          "right": 0,
          "top": 0,
          "width": 0,
        },
        "panelRect": Object {
          "bottom": 0,
          "height": 0,
          "left": 0,
          "right": 0,
          "top": 0,
          "width": 0,
        },
        "pointerRect": Object {
          "bottom": 0,
          "height": 0,
          "left": 0,
          "right": 0,
          "top": 0,
          "width": 0,
        },
        "viewportRect": Object {
          "bottom": 0,
          "height": 0,
          "left": 0,
          "right": 0,
          "top": 0,
          "width": 0,
        },
      },
    ],
  ],
}
`;

exports[`flyout/Flyout snapshots renders a custom pointer 1`] = `
.emotion-6 {
  position: relative;
  display: inline-block;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-4 {
  background-color: #ffffff;
  border-radius: 4px;
  border: 1px solid transparent;
  box-shadow: 0 0 16px rgba(0,0,0,0.25);
}

.emotion-3 {
  position: relative;
}

.emotion-2 {
  min-width: 200px;
  max-width: 400px;
  max-height: 360px;
  padding: 12px;
  overflow-y: auto;
  -ms-overflow-style: -ms-autohiding-scrollbar;
}

.emotion-5 {
  position: absolute;
  display: table;
  width: 100%;
  z-index: 9999;
  -webkit-transition-property: opacity,-webkit-transform;
  -webkit-transition-property: opacity,transform;
  transition-property: opacity,transform;
  -webkit-transition-duration: 250ms;
  transition-duration: 250ms;
  -webkit-transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  touch-action: auto;
  pointer-events: auto;
  opacity: 1;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

<div
  className="emotion-6"
>
  <div
    className="emotion-0"
  >
    <button
      className="hig--light-theme hig__button-v1 hig__button-v1--size-standard hig__button-v1--type-primary hig__button-v1--width-shrink"
      href={undefined}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={undefined}
      tabIndex="0"
      target={undefined}
    >
      <span
        className="hig__button__title"
      >
        Click Me
      </span>
    </button>
  </div>
  <div
    className="emotion-5"
  >
    <div
      aria-hidden="true"
      className="emotion-1"
      role="presentation"
      style={undefined}
    >
      <span>
        my custom pointer
      </span>
    </div>
    <div
      className="emotion-4"
      style={
        Object {
          "maxHeight": "150px",
        }
      }
    >
      <div
        className="emotion-3"
      >
        <div
          className="emotion-2"
          onScroll={[Function]}
        >
          Hello World
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`flyout/Flyout snapshots renders children from the given render function 1`] = `
.emotion-8 {
  position: relative;
  display: inline-block;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-1 {
  fill: transparent;
}

.emotion-2 {
  fill: #ffffff;
}

.emotion-6 {
  background-color: #ffffff;
  border-radius: 4px;
  border: 1px solid transparent;
  box-shadow: 0 0 16px rgba(0,0,0,0.25);
}

.emotion-5 {
  position: relative;
}

.emotion-4 {
  min-width: 200px;
  max-width: 400px;
  max-height: 360px;
  padding: 12px;
  overflow-y: auto;
  -ms-overflow-style: -ms-autohiding-scrollbar;
}

.emotion-7 {
  position: absolute;
  display: table;
  width: 100%;
  z-index: 9999;
  -webkit-transition-property: opacity,-webkit-transform;
  -webkit-transition-property: opacity,transform;
  transition-property: opacity,transform;
  -webkit-transition-duration: 250ms;
  transition-duration: 250ms;
  -webkit-transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  touch-action: auto;
  pointer-events: auto;
  opacity: 1;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

<div
  className="emotion-8"
>
  <div
    className="emotion-0"
  >
    <button
      className="hig--light-theme hig__button-v1 hig__button-v1--size-standard hig__button-v1--type-primary hig__button-v1--width-shrink"
      href={undefined}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={undefined}
      tabIndex="0"
      target={undefined}
    >
      <span
        className="hig__button__title"
      >
        Render prop
      </span>
    </button>
  </div>
  <div
    className="emotion-7"
  >
    <div
      aria-hidden="true"
      className="emotion-3"
      role="presentation"
      style={undefined}
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <polygon
          className="emotion-1"
          points="0,12 12,0 24,12"
        />
        <polygon
          className="emotion-2"
          points="2.5,12 12,2.5 21.5,12"
        />
      </svg>
    </div>
    <div
      className="emotion-6"
      style={
        Object {
          "maxHeight": "150px",
        }
      }
    >
      <div
        className="emotion-5"
      >
        <div
          className="emotion-4"
          onScroll={[Function]}
        >
          Hello World
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`flyout/Flyout snapshots renders content from the given render function 1`] = `
.emotion-8 {
  position: relative;
  display: inline-block;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-1 {
  fill: transparent;
}

.emotion-2 {
  fill: #ffffff;
}

.emotion-6 {
  background-color: #ffffff;
  border-radius: 4px;
  border: 1px solid transparent;
  box-shadow: 0 0 16px rgba(0,0,0,0.25);
}

.emotion-5 {
  position: relative;
}

.emotion-4 {
  min-width: 200px;
  max-width: 400px;
  max-height: 360px;
  padding: 12px;
  overflow-y: auto;
  -ms-overflow-style: -ms-autohiding-scrollbar;
}

.emotion-7 {
  position: absolute;
  display: table;
  width: 100%;
  z-index: 9999;
  -webkit-transition-property: opacity,-webkit-transform;
  -webkit-transition-property: opacity,transform;
  transition-property: opacity,transform;
  -webkit-transition-duration: 250ms;
  transition-duration: 250ms;
  -webkit-transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  touch-action: auto;
  pointer-events: auto;
  opacity: 1;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

<div
  className="emotion-8"
>
  <div
    className="emotion-0"
  >
    <button
      className="hig--light-theme hig__button-v1 hig__button-v1--size-standard hig__button-v1--type-primary hig__button-v1--width-shrink"
      href={undefined}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={undefined}
      tabIndex="0"
      target={undefined}
    >
      <span
        className="hig__button__title"
      >
        Click Me
      </span>
    </button>
  </div>
  <div
    className="emotion-7"
  >
    <div
      aria-hidden="true"
      className="emotion-3"
      role="presentation"
      style={undefined}
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <polygon
          className="emotion-1"
          points="0,12 12,0 24,12"
        />
        <polygon
          className="emotion-2"
          points="2.5,12 12,2.5 21.5,12"
        />
      </svg>
    </div>
    <div
      className="emotion-6"
      style={
        Object {
          "maxHeight": "150px",
        }
      }
    >
      <div
        className="emotion-5"
      >
        <div
          className="emotion-4"
          onScroll={[Function]}
        >
          Content from render prop
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`flyout/Flyout snapshots renders open by default 1`] = `
.emotion-8 {
  position: relative;
  display: inline-block;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-1 {
  fill: transparent;
}

.emotion-2 {
  fill: #ffffff;
}

.emotion-6 {
  background-color: #ffffff;
  border-radius: 4px;
  border: 1px solid transparent;
  box-shadow: 0 0 16px rgba(0,0,0,0.25);
}

.emotion-5 {
  position: relative;
}

.emotion-4 {
  min-width: 200px;
  max-width: 400px;
  max-height: 360px;
  padding: 12px;
  overflow-y: auto;
  -ms-overflow-style: -ms-autohiding-scrollbar;
}

.emotion-7 {
  position: absolute;
  display: table;
  width: 100%;
  z-index: 9999;
  -webkit-transition-property: opacity,-webkit-transform;
  -webkit-transition-property: opacity,transform;
  transition-property: opacity,transform;
  -webkit-transition-duration: 250ms;
  transition-duration: 250ms;
  -webkit-transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  touch-action: auto;
  pointer-events: auto;
  opacity: 1;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

<div
  className="emotion-8"
>
  <div
    className="emotion-0"
  />
  <div
    className="emotion-7"
  >
    <div
      aria-hidden="true"
      className="emotion-3"
      role="presentation"
      style={undefined}
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <polygon
          className="emotion-1"
          points="0,12 12,0 24,12"
        />
        <polygon
          className="emotion-2"
          points="2.5,12 12,2.5 21.5,12"
        />
      </svg>
    </div>
    <div
      className="emotion-6"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <div
        className="emotion-5"
      >
        <div
          className="emotion-4"
          onScroll={undefined}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`flyout/Flyout snapshots renders the panel from a basic render function 1`] = `
.emotion-5 {
  position: relative;
  display: inline-block;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-1 {
  fill: transparent;
}

.emotion-2 {
  fill: #ffffff;
}

.emotion-4 {
  position: absolute;
  display: table;
  width: 100%;
  z-index: 9999;
  -webkit-transition-property: opacity,-webkit-transform;
  -webkit-transition-property: opacity,transform;
  transition-property: opacity,transform;
  -webkit-transition-duration: 250ms;
  transition-duration: 250ms;
  -webkit-transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  touch-action: auto;
  pointer-events: auto;
  opacity: 1;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

<div
  className="emotion-5"
>
  <div
    className="emotion-0"
  >
    <button
      className="hig--light-theme hig__button-v1 hig__button-v1--size-standard hig__button-v1--type-primary hig__button-v1--width-shrink"
      href={undefined}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={undefined}
      tabIndex="0"
      target={undefined}
    >
      <span
        className="hig__button__title"
      >
        Click Me
      </span>
    </button>
  </div>
  <div
    className="emotion-4"
  >
    <div
      aria-hidden="true"
      className="emotion-3"
      role="presentation"
      style={undefined}
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <polygon
          className="emotion-1"
          points="0,12 12,0 24,12"
        />
        <polygon
          className="emotion-2"
          points="2.5,12 12,2.5 21.5,12"
        />
      </svg>
    </div>
    <div>
      Hello World
    </div>
  </div>
</div>
`;

exports[`flyout/Flyout snapshots renders the panel from a complex render function 1`] = `
.emotion-7 {
  position: relative;
  display: inline-block;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-1 {
  fill: transparent;
}

.emotion-2 {
  fill: #ffffff;
}

.emotion-5 {
  background-color: #ffffff;
  border-radius: 4px;
  border: 1px solid transparent;
  box-shadow: 0 0 16px rgba(0,0,0,0.25);
}

.emotion-4 {
  position: relative;
}

.emotion-6 {
  position: absolute;
  display: table;
  width: 100%;
  z-index: 9999;
  -webkit-transition-property: opacity,-webkit-transform;
  -webkit-transition-property: opacity,transform;
  transition-property: opacity,transform;
  -webkit-transition-duration: 250ms;
  transition-duration: 250ms;
  -webkit-transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  touch-action: auto;
  pointer-events: auto;
  opacity: 1;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

<div
  className="emotion-7"
>
  <div
    className="emotion-0"
  >
    <button
      className="hig--light-theme hig__button-v1 hig__button-v1--size-standard hig__button-v1--type-primary hig__button-v1--width-shrink"
      href={undefined}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={undefined}
      tabIndex="0"
      target={undefined}
    >
      <span
        className="hig__button__title"
      >
        Render prop
      </span>
    </button>
  </div>
  <div
    className="emotion-6"
  >
    <div
      aria-hidden="true"
      className="emotion-3"
      role="presentation"
      style={undefined}
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <polygon
          className="emotion-1"
          points="0,12 12,0 24,12"
        />
        <polygon
          className="emotion-2"
          points="2.5,12 12,2.5 21.5,12"
        />
      </svg>
    </div>
    <div
      className="emotion-5"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <div
        className="emotion-4"
      >
        <div
          data-mock="MyCustomContainer"
          onScroll={[Function]}
          style={
            Object {
              "maxHeight": undefined,
            }
          }
        >
          Content from render prop
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`flyout/Flyout snapshots renders with a basic set of props 1`] = `
.emotion-8 {
  position: relative;
  display: inline-block;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-1 {
  fill: transparent;
}

.emotion-2 {
  fill: #ffffff;
}

.emotion-6 {
  background-color: #ffffff;
  border-radius: 4px;
  border: 1px solid transparent;
  box-shadow: 0 0 16px rgba(0,0,0,0.25);
}

.emotion-5 {
  position: relative;
}

.emotion-4 {
  min-width: 200px;
  max-width: 400px;
  max-height: 360px;
  padding: 12px;
  overflow-y: auto;
  -ms-overflow-style: -ms-autohiding-scrollbar;
}

.emotion-7 {
  position: absolute;
  display: table;
  width: 100%;
  z-index: 9999;
  -webkit-transition-property: opacity,-webkit-transform;
  -webkit-transition-property: opacity,transform;
  transition-property: opacity,transform;
  -webkit-transition-duration: 250ms;
  transition-duration: 250ms;
  -webkit-transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  touch-action: auto;
  pointer-events: auto;
  opacity: 1;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

<div
  className="emotion-8"
>
  <div
    className="emotion-0"
  >
    <button
      className="hig--light-theme hig__button-v1 hig__button-v1--size-standard hig__button-v1--type-primary hig__button-v1--width-shrink"
      href={undefined}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={undefined}
      tabIndex="0"
      target={undefined}
    >
      <span
        className="hig__button__title"
      >
        Click Me
      </span>
    </button>
  </div>
  <div
    className="emotion-7"
  >
    <div
      aria-hidden="true"
      className="emotion-3"
      role="presentation"
      style={undefined}
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <polygon
          className="emotion-1"
          points="0,12 12,0 24,12"
        />
        <polygon
          className="emotion-2"
          points="2.5,12 12,2.5 21.5,12"
        />
      </svg>
    </div>
    <div
      className="emotion-6"
      style={
        Object {
          "maxHeight": "150px",
        }
      }
    >
      <div
        className="emotion-5"
      >
        <div
          className="emotion-4"
          onScroll={[Function]}
        >
          Hello World
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`flyout/Flyout snapshots renders without props 1`] = `
.emotion-8 {
  position: relative;
  display: inline-block;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-7 {
  position: absolute;
  display: none;
  width: 100%;
  z-index: 9999;
  -webkit-transition-property: opacity,-webkit-transform;
  -webkit-transition-property: opacity,transform;
  transition-property: opacity,transform;
  -webkit-transition-duration: 250ms;
  transition-duration: 250ms;
  -webkit-transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  touch-action: auto;
  pointer-events: auto;
  opacity: 1;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-1 {
  fill: transparent;
}

.emotion-2 {
  fill: #ffffff;
}

.emotion-6 {
  background-color: #ffffff;
  border-radius: 4px;
  border: 1px solid transparent;
  box-shadow: 0 0 16px rgba(0,0,0,0.25);
}

.emotion-5 {
  position: relative;
}

.emotion-4 {
  min-width: 200px;
  max-width: 400px;
  max-height: 360px;
  padding: 12px;
  overflow-y: auto;
  -ms-overflow-style: -ms-autohiding-scrollbar;
}

<div
  className="emotion-8"
>
  <div
    className="emotion-0"
  />
  <div
    className="emotion-7"
  >
    <div
      aria-hidden="true"
      className="emotion-3"
      role="presentation"
      style={undefined}
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <polygon
          className="emotion-1"
          points="0,12 12,0 24,12"
        />
        <polygon
          className="emotion-2"
          points="2.5,12 12,2.5 21.5,12"
        />
      </svg>
    </div>
    <div
      className="emotion-6"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <div
        className="emotion-5"
      >
        <div
          className="emotion-4"
          onScroll={undefined}
        />
      </div>
    </div>
  </div>
</div>
`;
